CMMP/test/SemanticError/04_DeclAfterUse.c
void main() {
    
    a=2;
    int64_t a;
}
